[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/gameOver.gd" type="Script" id=1]
[ext_resource path="res://textures/2x2transparentGrid.png" type="Texture" id=2]
[ext_resource path="res://fonts/SilkScreenFont12.fnt" type="BitmapFont" id=3]
[ext_resource path="res://textures/Button-Large-levelSelect.png" type="Texture" id=4]
[ext_resource path="res://audio/LevelOver.wav" type="Sample" id=5]

[sub_resource type="SampleLibrary" id=1]

samples/LevelOver = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="gameOver" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 540.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LabelHeading" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 143.0
margin/right = 294.0
margin/bottom = 184.0
custom_fonts/font = ExtResource( 3 )
text = "You reached level X"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelTitle" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 76.0
margin/right = 294.0
margin/bottom = 117.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelCurrentScore" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 186.0
margin/right = 294.0
margin/bottom = 227.0
custom_fonts/font = ExtResource( 3 )
text = "Your Score: XX"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelHighScore" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 232.0
margin/right = 294.0
margin/bottom = 273.0
custom_fonts/font = ExtResource( 3 )
text = "High Score: XX"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButtonContinue" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 301.0
margin/right = 232.0
margin/bottom = 331.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[connection signal="pressed" from="TextureButtonContinue" to="." method="_on_TextureButtonContinue_pressed"]


